cmake_minimum_required(VERSION 3.13)
project(EntryTask)
set(EXECUTABLE_OUTPUT_PATH "../bin")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(EntryTask main.cpp)
target_link_libraries( EntryTask ${OpenCV_LIBS} )